# waifetch

./: LICENSE  README.md  __main__.py  demo.py  install.sh  pyproject.toml  setup.py  waifetch.py
.github/: CODEOWNERS  FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
src/: __init__.py  config.py  display.py  github_client.py
src/commands/: __init__.py  fetch.py  list.py
